# zk-symmetric-crypto

./: .gitignore  .prettierignore  readme.md
.github/workflows/: publish.yaml  test.yaml
android/: build.gradle  settings.gradle
circom/: package-lock.json  package.json  readme.md
circom/scripts/: build-circuit.sh  download-ptau.sh
circom/tests/: chacha-circuits.test.ts
examples/: chacha20-barretenberg.js
expander/: Cargo.toml  serialise_witness.js
expander/scripts/: build-wasm.sh
expander/src/: lib.rs  main.rs
gnark/: README.md  go.mod  go.sum
gnark/dkg/: dkg.go  types.go  wip.go
gnark/expandergen/: expandergen.go
gnark/keygen/: keygen.go
gnark/libraries/: aux_test.go  core_test.go  test_helpers.go
gnark/scripts/: build.sh
gnark/utils/: dkg.go  dleq.go  gf.go  oprf.go  toprf.go  utils_test.go
ios/: gnarkprover.podspec
ios/Classes/: gnarkprover.c
js/: .eslintignore  STWO_TOPRF_TEST_PLAN.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
src/: gnark.ts
stwo/: Cargo.toml  Makefile  README.md  bench_toprf_wasm.mjs  bench_wasm.mjs  test_wasm.mjs
stwo/src/: lib.rs  main.rs  wasm_api.rs
stwo/src/aes/: mod.rs  sbox_table.rs
stwo/src/aes/bitwise/: constraints.rs  gen.rs  mod.rs
stwo/src/aes/lookup/: air.rs  air_ctr.rs  constraints.rs  constraints256.rs  ctr.rs  gen.rs  gen_ctr.rs  mod.rs
stwo/src/babyjub/: mod.rs
stwo/src/babyjub/extraction/: constraints.rs  gen.rs  mod.rs
stwo/src/babyjub/field256/: constraints.rs  gen.rs  mod.rs  underconstraint_test.rs
stwo/src/babyjub/mimc/: constraints.rs  gen.rs  mod.rs
stwo/src/babyjub/mimc_compat/: constants.rs  constraints.rs  gen.rs  mod.rs
stwo/src/babyjub/point/: constraints.rs  gen.rs  mod.rs  underconstraint_test.rs
stwo/src/babyjub/toprf/: air.rs  constraints.rs  gen.rs  gnark_compat_test.rs  integration_test.rs  mod.rs  underconstraint_test.rs
stwo/src/chacha/: air.rs  block.rs  constraints.rs  mod.rs  quarter_round.rs  underconstraint_test.rs  xor_table.rs
stwo/src/chacha/bitwise/: air.rs  air_stream.rs  constraints.rs  constraints_stream.rs  gen.rs  gen_stream.rs  mod.rs
stwo/src/chacha/block_air/: constraints.rs  gen.rs  mod.rs
stwo/src/chacha/round/: constraints.rs  gen.rs  mod.rs
stwo/src/combined/: air.rs  gen.rs  mod.rs
stwo/src/tests/: mod.rs  underconstraint.rs
stwo/src/toprf_server/: dkg.rs  dleq.rs  e2e_test.rs  eval.rs  mod.rs
ts-oprf/: package-lock.json  package.json  tsconfig.json
(+176 files in other folders)
