[package]
name = "s2circuits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2"
itertools = "0.13"
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "f117d487b39cd4441c2dbbdd7127b186f9c23564", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "f117d487b39cd4441c2dbbdd7127b186f9c23564", features = ["prover"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
